inc/quiche.pp


    type
      quiche_h3_error = (QUICHE_H3_ERR_DONE := -(1),QUICHE_H3_ERR_BUFFER_TOO_SHORT := -(2),
        QUICHE_H3_ERR_INTERNAL_ERROR := -(3),
        QUICHE_H3_ERR_EXCESSIVE_LOAD := -(4),
        QUICHE_H3_ERR_ID_ERROR := -(5),QUICHE_H3_ERR_STREAM_CREATION_ERROR := -(6),
        QUICHE_H3_ERR_CLOSED_CRITICAL_STREAM := -(7),
        QUICHE_H3_ERR_MISSING_SETTINGS := -(8),
        QUICHE_H3_ERR_FRAME_UNEXPECTED := -(9),
        QUICHE_H3_ERR_FRAME_ERROR := -(10),QUICHE_H3_ERR_QPACK_DECOMPRESSION_FAILED := -(11),
        QUICHE_H3_ERR_STREAM_BLOCKED := -(13),
        QUICHE_H3_ERR_SETTINGS_ERROR := -(14),
        QUICHE_H3_ERR_REQUEST_REJECTED := -(15),
        QUICHE_H3_ERR_REQUEST_CANCELLED := -(16),
        QUICHE_H3_ERR_REQUEST_INCOMPLETE := -(17),
        QUICHE_H3_ERR_MESSAGE_ERROR := -(18),
        QUICHE_H3_ERR_CONNECT_ERROR := -(19),
        QUICHE_H3_ERR_VERSION_FALLBACK := -(20),
        QUICHE_H3_TRANSPORT_ERR_DONE := QUICHE_ERR_DONE-1000,
        QUICHE_H3_TRANSPORT_ERR_BUFFER_TOO_SHORT := QUICHE_ERR_BUFFER_TOO_SHORT-1000,
        QUICHE_H3_TRANSPORT_ERR_UNKNOWN_VERSION := QUICHE_ERR_UNKNOWN_VERSION-1000,
        QUICHE_H3_TRANSPORT_ERR_INVALID_FRAME := QUICHE_ERR_INVALID_FRAME-1000,
        QUICHE_H3_TRANSPORT_ERR_INVALID_PACKET := QUICHE_ERR_INVALID_PACKET-1000,
        QUICHE_H3_TRANSPORT_ERR_INVALID_STATE := QUICHE_ERR_INVALID_STATE-1000,
        QUICHE_H3_TRANSPORT_ERR_INVALID_STREAM_STATE := QUICHE_ERR_INVALID_STREAM_STATE-1000,
        QUICHE_H3_TRANSPORT_ERR_INVALID_TRANSPORT_PARAM := QUICHE_ERR_INVALID_TRANSPORT_PARAM-1000,
        QUICHE_H3_TRANSPORT_ERR_CRYPTO_FAIL := QUICHE_ERR_CRYPTO_FAIL-1000,
        QUICHE_H3_TRANSPORT_ERR_TLS_FAIL := QUICHE_ERR_TLS_FAIL-1000,
        QUICHE_H3_TRANSPORT_ERR_FLOW_CONTROL := QUICHE_ERR_FLOW_CONTROL-1000,
        QUICHE_H3_TRANSPORT_ERR_STREAM_LIMIT := QUICHE_ERR_STREAM_LIMIT-1000,
        QUICHE_H3_TRANSPORT_ERR_STREAM_STOPPED := QUICHE_ERR_STREAM_STOPPED-1000,
        QUICHE_H3_TRANSPORT_ERR_STREAM_RESET := QUICHE_ERR_STREAM_RESET-1000,
        QUICHE_H3_TRANSPORT_ERR_FINAL_SIZE := QUICHE_ERR_FINAL_SIZE-1000,
        QUICHE_H3_TRANSPORT_ERR_CONGESTION_CONTROL := QUICHE_ERR_CONGESTION_CONTROL-1000,
        QUICHE_H3_TRANSPORT_ERR_ID_LIMIT := QUICHE_ERR_ID_LIMIT-1000,
        QUICHE_H3_TRANSPORT_ERR_OUT_OF_IDENTIFIERS := QUICHE_ERR_OUT_OF_IDENTIFIERS-1000,
        QUICHE_H3_TRANSPORT_ERR_KEY_UPDATE := QUICHE_ERR_KEY_UPDATE-1000
        );

    { Stores configuration shared between multiple connections. }
    { Creates an HTTP/3 config object with default settings values. }

    function quiche_h3_config_new:Pquiche_h3_config;

    { Sets the `SETTINGS_MAX_FIELD_SECTION_SIZE` setting. }
    procedure quiche_h3_config_set_max_field_section_size(config:Pquiche_h3_config; v:uint64_t);

    { Sets the `SETTINGS_QPACK_MAX_TABLE_CAPACITY` setting. }
    procedure quiche_h3_config_set_qpack_max_table_capacity(config:Pquiche_h3_config; v:uint64_t);

    { Sets the `SETTINGS_QPACK_BLOCKED_STREAMS` setting. }
    procedure quiche_h3_config_set_qpack_blocked_streams(config:Pquiche_h3_config; v:uint64_t);

    { Sets the `SETTINGS_ENABLE_CONNECT_PROTOCOL` setting. }
    procedure quiche_h3_config_enable_extended_connect(config:Pquiche_h3_config; enabled:bool);

    { Frees the HTTP/3 config object. }
    procedure quiche_h3_config_free(config:Pquiche_h3_config);

    { An HTTP/3 connection. }

    //type
    { Creates a new HTTP/3 connection using the provided QUIC connection. }

    function quiche_h3_conn_new_with_transport(quiche_conn:Pquiche_conn; config:Pquiche_h3_config):Pquiche_h3_conn;


    type
      quiche_h3_event_type = (QUICHE_H3_EVENT_HEADERS,QUICHE_H3_EVENT_DATA,
        QUICHE_H3_EVENT_FINISHED,QUICHE_H3_EVENT_GOAWAY,
        QUICHE_H3_EVENT_RESET,QUICHE_H3_EVENT_PRIORITY_UPDATE
        );

    { Processes HTTP/3 data received from the peer. }

    function quiche_h3_conn_poll(conn:Pquiche_h3_conn; quic_conn:Pquiche_conn; ev:PPquiche_h3_event):int64_t;

    { Returns the type of the event. }
(* error 
enum quiche_h3_event_type quiche_h3_event_type(quiche_h3_event *ev);
in declaration at line 861 *)
    { Iterates over the headers in the event. }
    { }
    { The `cb` callback will be called for each header in `ev`. `cb` should check }
    { the validity of pseudo-headers and headers. If `cb` returns any value other }
    { than `0`, processing will be interrupted and the value is returned to the }
    { caller. }
    function quiche_h3_event_for_each_header(ev:Pquiche_h3_event; cb:TFunctionCallbackCheck; argp:pointer):longint;

    { Iterates over the peer's HTTP/3 settings. }
    { }
    { The `cb` callback will be called for each setting in `conn`. }
    { If `cb` returns any value other than `0`, processing will be interrupted and }
    { the value is returned to the caller. }
    function quiche_h3_for_each_setting(conn:Pquiche_h3_conn; cb:TFunctionCallbackSettingCheck; argp:pointer):longint;

    { Check whether data will follow the headers on the stream. }
    function quiche_h3_event_headers_has_body(ev:Pquiche_h3_event):bool;

    { Check whether or not extended connection is enabled by the peer }
    function quiche_h3_extended_connect_enabled_by_peer(conn:Pquiche_h3_conn):bool;

    { Frees the HTTP/3 event object. }
    procedure quiche_h3_event_free(ev:Pquiche_h3_event);

(* Const before type ignored *)
(* Const before type ignored *)

    type
      quiche_h3_header = record
          name : ^uint8_t;
          name_len : size_t;
          value : ^uint8_t;
          value_len : size_t;
        end;
    { Extensible Priorities parameters. }

      quiche_h3_priority = record
          urgency : uint8_t;
          incremental : bool;
        end;
    { Sends an HTTP/3 request. }

    function quiche_h3_send_request(conn:Pquiche_h3_conn; quic_conn:Pquiche_conn; headers:Pquiche_h3_header; headers_len:size_t; fin:bool):int64_t;

    { Sends an HTTP/3 response on the specified stream with default priority. }
    function quiche_h3_send_response(conn:Pquiche_h3_conn; quic_conn:Pquiche_conn; stream_id:uint64_t; headers:Pquiche_h3_header; headers_len:size_t; 
               fin:bool):longint;

    { Sends an HTTP/3 response on the specified stream with specified priority. }
    function quiche_h3_send_response_with_priority(conn:Pquiche_h3_conn; quic_conn:Pquiche_conn; stream_id:uint64_t; headers:Pquiche_h3_header; headers_len:size_t; 
               priority:Pquiche_h3_priority; fin:bool):longint;

    { Sends an HTTP/3 body chunk on the given stream. }
    function quiche_h3_send_body(conn:Pquiche_h3_conn; quic_conn:Pquiche_conn; stream_id:uint64_t; body:Puint8_t; body_len:size_t; 
               fin:bool):ssize_t;

    { Reads request or response body data into the provided buffer. }
    function quiche_h3_recv_body(conn:Pquiche_h3_conn; quic_conn:Pquiche_conn; stream_id:uint64_t; out_buffer:Puint8_t; out_len:size_t):ssize_t;

    { Sends a GOAWAY frame to initiate graceful connection closure. }
    function quiche_h3_send_goaway(conn:Pquiche_h3_conn; quic_conn:Pquiche_conn; id:uint64_t):longint;

    { Try to parse an Extensible Priority field value. }
    function quiche_h3_parse_extensible_priority(priority:Puint8_t; priority_len:size_t; parsed:Pquiche_h3_priority):longint;

    {/ Sends a PRIORITY_UPDATE frame on the control stream with specified }
    {/ request stream ID and priority. }
    function quiche_h3_send_priority_update_for_request(conn:Pquiche_h3_conn; quic_conn:Pquiche_conn; stream_id:uint64_t; priority:Pquiche_h3_priority):longint;

    { Take the last received PRIORITY_UPDATE frame for a stream. }
    { }
    { The `cb` callback will be called once. `cb` should check the validity of }
    { priority field value contents. If `cb` returns any value other than `0`, }
    { processing will be interrupted and the value is returned to the caller. }
    function quiche_h3_take_last_priority_update(conn:Pquiche_h3_conn; prioritized_element_id:uint64_t; cb:function (priority_field_value:Puint8_t; priority_field_value_len:uint64_t; argp:pointer):longint; argp:pointer):longint;

    { Returns whether the peer enabled HTTP/3 DATAGRAM frame support. }
    function quiche_h3_dgram_enabled_by_peer(conn:Pquiche_h3_conn; quic_conn:Pquiche_conn):bool;

    { Frees the HTTP/3 connection object. }
    procedure quiche_h3_conn_free(conn:Pquiche_h3_conn);

{$if defined(__cplusplus)}
//(* error 
//}  // extern C
//    //{ extern C }
//{$endif}
{$endif}
    { QUICHE_H }

implementation
